--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gia Phả Lê Văn</title>
+  <title>Gia Phả </title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>📜 Gia Phả Dòng Họ Lê Văn</h1>
+  <h1>📜 SƠ ĐỒ PHÁI HỌ NGUYỄN CHUẨN</h1>
   <div id="tree-container"></div>
   <script src="data.js"></script>
   <script src="script.js"></script>
