--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gia Phả </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sơ Đồ Gia Phả</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>📜 SƠ ĐỒ PHÁI HỌ NGUYỄN CHUẨN</h1>
-  <div id="tree-container"></div>
+  <h1>📜 GIA PHẢ HỌ LÊ VĂN</h1>
+  <div id="tree-wrapper">
+    <div id="tree-container"></div>
+  </div>
+
   <script src="data.js"></script>
   <script src="script.js"></script>
 </body>
