--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>📜 GIA PHẢ HỌ LÊ VĂN</h1>
+  <h1>SƠ ĐỒ PHÁI HỌ NGUYỄN</h1>
   <div id="tree-wrapper">
     <div id="tree-container"></div>
   </div>
